@@ -490,6 +490,9 @@ Bug Fixes
 
 * SOLR-4279: Wrong exception message if _version_ field is multivalued (shalin)
 
+* SOLR-4170: The 'backup' ReplicationHandler command can sometimes use a stale
+  index directory rather than the current one. (Mark Miller, Marcin Rzewuck)
+
 Other Changes
 ----------------------
 
